manifests/cert-manager/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager
  labels:
    app.kubernetes.io/name: webhook
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: webhook
      app.kubernetes.io/component: webhook
      app.kubernetes.io/instance: cert-manager
  ingress:
  - toPorts:
    - ports:
      - port: "10250"
    fromEntities:
    - kube-apiserver
